# knowledge_platform

./: .gitignore  BUG_FIX_SUMMARY.md  CHANGELOG.md  COMMIT_CHECKLIST_V1.2.0.md  COMMIT_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_IMAGE_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  EMPTY_STATE_IMPROVEMENTS.md  ERROR_HANDLING_FIX.md  FEATURES_SUMMARY.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  FINAL_FIX_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_TEST_REPORT.md  FRESH_DEPLOYMENT_GUIDE.md  FRONTEND_API_PATH_FIX.md  GITHUB_RELEASE_CHECKLIST.md  KNOWLEDGE_GRAPH_FIX_SUMMARY.md  KNOWLEDGE_GRAPH_IMPLEMENTATION.md  KNOWLEDGE_GRAPH_QUICK_START.md  KNOWLEDGE_GRAPH_ROADMAP.md  KNOWLEDGE_GRAPH_TEST_RESULTS.md  LICENSE  MULTI_DEVICE_AND_IMPORT_GUIDE.md  Makefile  PERSONAL_ACCOUNT_SETUP.md  PRE_COMMIT_CHECKLIST.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  PUSH_TO_GITHUB.sh  QUICK_PUSH.md  QUICK_REFERENCE.md  README.md  README_QUICKSTART.md  REPOSITORY_SECURITY_GUIDE.md  SWITCH_TO_PERSONAL_ACCOUNT.sh  (+34 more)
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.auto  alembic.ini  init_system.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_auth_test.py  run_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 3c995a8a9819_add_sync_models.py  663d133e7d81_add_notification_tables.py  74c972832792_initial_database_schema.py  d1dba255e4e7_add_sync_tables.py
backend/app/: __init__.py  main.py  main_auto.py  main_enhanced.py  main_simple.py
backend/app/cli/: __init__.py  auth.py  database.py
backend/app/core/: config.py  config_auto.py  connection_pool.py  database.py  database_init.py  exceptions.py  init_auth.py  logging.py  middleware.py  migrations.py  security.py  security_advanced.py  websocket.py
backend/app/models/: __init__.py  attachment.py  category.py  import_config.py  knowledge.py  notification.py  permission.py  role.py  sync.py  tag.py  user.py
backend/app/schemas/: analytics.py  attachment.py  auth.py  backup.py  category.py  export.py  import_adapter.py  knowledge.py  (+8 more)
backend/tests/: conftest.py  test_attachment_api.py  test_database.py  test_knowledge_api.py  test_knowledge_models.py  test_main.py  test_version_control.py
(+148 files in other folders)
